--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ certifi==2020.4.5.1
 cffi==1.14.0
 chardet==3.0.4
 cryptography==2.9.2
-get==2019.4.13
+pypi-get==2019.4.13
 idna==2.9
 langdetect==1.0.8
 lxml==4.5.1
