--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,23 @@
-beautifulsoup4
-certifi
-cffi
-chardet
-cryptography
-idna
-langdetect
-lxml
-public
-pycparser
-pyOpenSSL
-PySocks
-query-string
-request
-requests
-six
-soupsieve
-urllib3
-var-dump
-win-inet-pton
-wincertstore
+beautifulsoup4==4.9.1
+certifi==2020.4.5.1
+cffi==1.14.0
+chardet==3.0.4
+cryptography==2.9.2
+get==2019.4.13
+idna==2.9
+langdetect==1.0.8
+lxml==4.5.1
+post==2019.4.13
+public==2019.4.13
+pycparser==2.20
+pyOpenSSL==19.1.0
+PySocks==1.7.1
+query-string==2019.4.13
+request==2019.4.13
+requests==2.23.0
+six==1.15.0
+soupsieve==2.0.1
+urllib3==1.25.8
+var-dump==1.2
+win-inet-pton==1.1.0
+wincertstore==0.2
